connected to right version of node

--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Galvanize Admissions Portal",
+  "name": "galvanize-admission-portal",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
