--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^6.1.0",
+    "event-stream": "^4.0.1",
     "express": "^4.16.4",
     "joi": "^14.0.3",
     "jsonwebtoken": "^8.3.0",
