--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Admissions portal application for Galvanize students to be able to apply.",
   "main": "index.js",
   "engines": {
-    "node": "10.13.0"
-  },
+   "node": "10.13.0"
+ },
   "scripts": {
     "client": "cd ./client && yarn start",
     "server": "cd ./server && nodemon index.js",
     "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "cd client && yarn install && yarn run build"
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +20,6 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^6.1.0",
-    "event-stream": "^4.0.1",
     "express": "^4.16.4",
     "joi": "^14.0.3",
     "jsonwebtoken": "^8.3.0",
