removed yarn from start script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
    "node": "10.13.0"
  },
   "scripts": {
-    "client": "cd ./client && yarn start",
+    "client": "cd ./client && npm start",
     "start": "cd ./server && nodemon index.js",
     "dev": "concurrently --kill-others-on-fail \"npm start\" \"npm run client\"",
     "heroku-postbuild": "cd client && npm install && npm run build"
