--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:5000",
+  "homepage": ".",
   "eslintConfig": {
     "extends": "react-app"
   },
