--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "codemirror": "^5.42.2",
     "joi": "^14.0.4",
     "node-sass": "^4.11.0",
     "react": "^16.6.0",
+    "react-codemirror2": "^5.1.0",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
