--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "buble": "^0.19.6",
     "codemirror": "^5.42.2",
     "joi": "^14.0.4",
     "node-sass": "^4.11.0",
