--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Admissions portal application for Galvanize students to be able to apply.",
   "main": "index.js",
   "engines": {
-   "node": "10.13.0"
- },
+    "node": "10.13.0"
+  },
   "scripts": {
     "client": "cd client && npm start",
     "start": "cd server && node index.js",
@@ -23,12 +23,16 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "joi": "^14.0.3",
+    "jsforce": "^1.9.1",
     "jsonwebtoken": "^8.3.0",
     "knex": "^0.15.2",
     "morgan": "^1.9.1",
     "pg": "^7.6.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-latest": "^6.24.1",
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.5"
   }
