--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsforce": "^1.9.1",
     "jsonwebtoken": "^8.3.0",
     "knex": "^0.15.2",
+    "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "pg": "^7.6.0"
   },
