--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "clean": "rm -rf dist && mkdir dist",
     "build-babel": "babel -d ./dist ./server -s",
     "build": "npm run clean && npm run build-babel",
-    "start": "npm run build && node ./dist/index.js",
+    "prestart":"npm run build",
+    "start": "node ./dist/index.js",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "keywords": [],
