--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clean": "rm -rf dist && mkdir dist",
     "build-babel": "babel -d ./dist ./server -s",
     "build": "npm run clean && npm run build-babel",
-    "prestart":"npm run build",
+    "heroku-prebuild":"npm run build",
     "start": "node ./dist/index.js",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
