--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "clean": "rm -rf dist && mkdir dist",
     "build-babel": "babel -d ./dist ./server -s",
-    "post-install": "npm run clean && npm run build-babel",
-    "start": "node ./dist/index.js",
+    "start": "npm run clean && npm run build-babel && node ./dist/index.js",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "keywords": [],
