--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "knex": "^0.15.2",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
+    "nodemailer": "^5.1.1",
     "pg": "^7.6.0"
   },
   "devDependencies": {
