--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cors": "^2.8.5",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "express-force-https": "^1.0.0",
     "if-env": "^1.0.4",
     "joi": "^14.0.3",
     "jsforce": "^1.9.1",
