--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "start": "REACT_APP_ENV=development react-scripts start",
     "build": "react-scripts build",
-    "build:staging": "REACT_APP_ENV=staging npm run build",
+    "build:staging": "REACT_APP_ENV=production npm run build",
     "build:production": "REACT_APP_ENV=production npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
