--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "knex": "^0.15.2",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
+    "node-fetch": "^2.3.0",
     "nodemailer": "^5.1.1",
     "pg": "^7.6.0"
   },
