--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "client": "cd client && npm start",
     "server": "cd server && nodemon index.js",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "test": "PORT=2999 NODE_ENV=test mocha -R nyan $(find server/test -name '*.test.js') --exit",
     "clean": "rm -rf dist && mkdir dist",
     "build-babel": "babel -d ./dist ./server -s",
     "start": "npm run clean && npm run build-babel && node ./dist/index.js",
@@ -47,6 +48,10 @@
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
-    "nodemon": "^1.18.5"
+    "nodemon": "^1.18.5",
+    "mocha": "^5.2.0",
+    "nock": "^10.0.6",
+    "sinon": "^7.3.1",
+    "supertest": "^4.0.2"
   }
 }
