--- a/package.json
+++ b/package.json
@@ -48,9 +48,10 @@
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
-    "nodemon": "^1.18.5",
+    "knex-cleaner": "^1.1.4",
     "mocha": "^5.2.0",
     "nock": "^10.0.6",
+    "nodemon": "^1.18.5",
     "sinon": "^7.3.1",
     "supertest": "^4.0.2"
   }
