--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express-force-https": "^1.0.0",
     "if-env": "^1.0.4",
     "joi": "^14.0.3",
+    "joi-phone-number": "^3.0.1",
     "jsforce": "^1.9.1",
     "jsonwebtoken": "^8.3.0",
     "knex": "^0.15.2",
