--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "express-force-https": "^1.0.0",
+    "honeybadger": "^1.3.0",
     "if-env": "^1.0.4",
     "joi": "^14.0.3",
     "joi-phone-number": "^3.0.1",
