--- a/package.json
+++ b/package.json
@@ -16,11 +16,9 @@
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "test": "PORT=2999 NODE_ENV=test mocha -R nyan $(find server/test -name '*.test.js') --exit",
     "clean": "rm -rf dist && mkdir dist",
-    "build-babel": "./node_modules/.bin/babel -d ./dist ./server -s",
-    "build": "npm run clean && npm run build-babel",
-    "heroku-prebuild": "npm run build",
-    "start": "node ./dist/index.js",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "build-babel": "babel -d ./dist ./server -s",
+    "start": "npm run clean && npm run build-babel && node ./dist/index.js",
+    "heroku-postbuild": "if-env NODE_ENV=production && cd client && npm install && npm run build:production || cd client && npm install && npm run build:staging"
   },
   "keywords": [],
   "author": "",
@@ -28,7 +26,9 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
