feat(react): add component template and migration for assessment

--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "if-env": "^1.0.4",
     "joi": "^14.0.3",
     "joi-phone-number": "^3.0.1",
-    "jsforce": "^1.9.1",
+    "jsforce": "1.9.3",
     "jsonwebtoken": "^8.3.0",
-    "knex": "^0.15.2",
+    "knex": "0.15.2",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "node-fetch": "^2.3.0",
