--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^16.6.0",
     "react-modal": "^3.8.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^3.0.1"
+    "react-scripts": "^3.0.1",
+    "yarn": "1.19.1"
   },
   "scripts": {
     "start": "REACT_APP_ENV=development react-scripts start",
